--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dotenv": "^0.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
     "tspath": "^1.3.7",
     "typescript": "^4.4.2",
@@ -30,7 +30,7 @@
     "yup-phone-lite": "^1.1.2"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
