--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui-treasury/styles": "^1.13.1",
+    "@pbe/react-yandex-maps": "^1.1.8",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -14,16 +18,17 @@
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "ios-switch-material-ui": "^3.7.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
     "tspath": "^1.3.7",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2",
@@ -52,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
